# lending

./: .gitignore
api/: migrate_user_table.py  pyproject.toml  seed_data.py  update_db.py
api/app/: main.py
api/app/database/: db.py  init_db.py
api/app/models/: models.py  schemas.py
api/app/routers/: documents.py  loans.py  users.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/applications/: LoanApplications.js  LoanDetails.js
frontend/src/components/applications/validation/: VarianceReview.js
frontend/src/components/dashboard/: Dashboard.js
frontend/src/components/document/: DocumentUpload.js  DocumentViewer.js
frontend/src/components/layout/: Header.js  Sidebar.js  UserPreferences.js
frontend/src/components/settings/: Settings.js
frontend/src/services/: api.js  authService.js  documentService.js  loanService.js  userService.js
llm_integrations/api/: README.md  pyproject.toml  run.py
llm_integrations/api/app/main/: __init__.py  app.py
llm_integrations/api/app/models/: __init__.py  document_models.py
llm_integrations/api/app/routers/: __init__.py  documents.py
llm_integrations/api/app/services/: __init__.py  gemini_pdf_processor.py  pdf_processor_factory.py
